sparse-struct/tests/ui/wrong-attribute.stderr
error: expected identifier
 --> tests/ui/wrong-attribute.rs:4:15
  |
4 | #[struct_name("hello")]
  |               ^^^^^^^

error: The `struct_name` should be specified on the enum, not on its variants.
  --> tests/ui/wrong-attribute.rs:13:5
   |
13 |     #[struct_name("hello")]
   |     ^
